--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,8 +86,10 @@ jobs:
           command: php artisan migrate
       - run:
           name: Run PHP tests
-          command: ./vendor/bin/phpunit
-      - codecov/upload
+          command: ./vendor/bin/phpunit --coverage-xml coverage
+      - codecov/upload:
+          file: coverage.xml
+          token: CODECOV_TOKEN
 
   # cypress-install:
   #   docker:
