--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,8 @@ jobs:
           name: Install Xdebug for Code Coverage
           command: |
             sudo apt-get update && sudo apt-get install -y php-xdebug
-            echo 'zend_extension=xdebug.so' >> ~/.phpenv/versions/$(phpenv global)/etc/php.ini
-            echo 'xdebug.mode=coverage' >> ~/.phpenv/versions/$(phpenv global)/etc/php.ini
+            # Add Xdebug config to PHP CLI
+            echo 'xdebug.mode=coverage' | sudo tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - run:
           name: Wait for MySQL
           command: |
