--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,12 @@ jobs:
           name: Install composer dependencies
           command: composer install --no-interaction --prefer-dist --no-scripts --no-progress --no-suggest
       - run:
+          name: Install Xdebug for Code Coverage
+          command: |
+            sudo apt-get update && sudo apt-get install -y php-xdebug
+            # Add Xdebug config to PHP CLI
+            echo 'xdebug.mode=coverage' | sudo tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - run:
           name: Set up Laravel environment
           command: |
             cp .env.example .env
@@ -89,20 +95,20 @@ jobs:
       - run:
           name: Install Cypress dependencies
           command: cd react && npm install
-      - run:
-          name: Start React server
-          command: |
-            cd react
-            # Start the server in the background
-            npm run dev & # This starts the server and continues to run in the background
-            SERVER_PID=$!
-            # Wait for the server to be up and running
-            for i in `seq 1 30`; do
-              curl -sSf http://localhost:3000 && echo "Server is up" && exit 0
-              echo -n .
-              sleep 1
-            done
-            echo "Failed to start server" && exit 1
+      # - run:
+      #     name: Start React server
+      #     command: |
+      #       cd react
+      #       # Start the server in the background
+      #       npm run dev & # This starts the server and continues to run in the background
+      #       SERVER_PID=$!
+      #       # Wait for the server to be up and running
+      #       for i in `seq 1 30`; do
+      #         curl -sSf http://localhost:3000 && echo "Server is up" && exit 0
+      #         echo -n .
+      #         sleep 1
+      #       done
+      #       echo "Failed to start server" && exit 1
       - run:
           name: Run Cypress tests
           command: cd react && npx cypress run
