--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,19 +96,8 @@ jobs:
           name: Install Cypress dependencies
           command: cd react && npm install
       - run:
-          name: Start React server
-          command: |
-            cd react
-            npm run dev &
-            # Store the background process ID
-            SERVER_PID=$!
-            # Wait for the server to be up and running
-            for i in `seq 1 30`; do
-              curl -sSf http://localhost:5173 && echo "Server is up" && exit 0
-              echo -n .
-              sleep 1
-            done
-            echo "Failed to start server" && kill $SERVER_PID && exit 1
+          name: Wait for the server to be ready
+          command: npx wait-on http://localhost:5173
       - run:
           name: Run Cypress tests
           command: cd react && npx cypress run
